# IN7605-Heuristicas-para-Optimizacion-Entera-y-Aplicaciones

./: .gitignore  README.md  TSP.ipynb  clase_1.ipynb  main.py  pyproject.toml  requirements.txt  setup_env.ps1  setup_env.sh
clases/: README.md  clase_1.ipynb  clase_2.ipynb  clase_3.ipynb  clase_4.ipynb  helpers.py
clases/data/: PR17.sol  bus_stations_santiago.geojson
clases/presentaciones/: clase1.html  clase2.html  clase4.html
clases/soluciones/: clase_1.ipynb  clase_2.ipynb
